--- a/Tools/Calculators/UI_Forms/Den_Calc.ui
+++ b/Tools/Calculators/UI_Forms/Den_Calc.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1001</width>
-    <height>843</height>
+    <width>688</width>
+    <height>417</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -31,7 +31,7 @@
           <property name="minimumSize">
            <size>
             <width>0</width>
-            <height>57</height>
+            <height>30</height>
            </size>
           </property>
           <property name="text">
@@ -50,11 +50,50 @@
           <property name="minimumSize">
            <size>
             <width>0</width>
-            <height>57</height>
+            <height>30</height>
            </size>
           </property>
           <property name="text">
            <string>H2O</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_10">
+          <property name="minimumSize">
+           <size>
+            <width>50</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>Precision:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QSpinBox" name="preSB">
+          <property name="minimum">
+           <number>1</number>
+          </property>
+          <property name="maximum">
+           <number>10</number>
+          </property>
+          <property name="value">
+           <number>3</number>
           </property>
          </widget>
         </item>
@@ -86,7 +125,7 @@
           <property name="minimumSize">
            <size>
             <width>0</width>
-            <height>57</height>
+            <height>30</height>
            </size>
           </property>
           <property name="text">
@@ -105,7 +144,7 @@
           <property name="minimumSize">
            <size>
             <width>0</width>
-            <height>57</height>
+            <height>0</height>
            </size>
           </property>
           <property name="text">
@@ -137,7 +176,7 @@
           <property name="minimumSize">
            <size>
             <width>0</width>
-            <height>57</height>
+            <height>30</height>
            </size>
           </property>
           <property name="text">
@@ -156,7 +195,7 @@
           <property name="minimumSize">
            <size>
             <width>0</width>
-            <height>57</height>
+            <height>30</height>
            </size>
           </property>
           <property name="text">
@@ -175,7 +214,7 @@
           <property name="minimumSize">
            <size>
             <width>0</width>
-            <height>57</height>
+            <height>30</height>
            </size>
           </property>
           <property name="maximumSize">
@@ -264,7 +303,7 @@
        <widget class="QTableWidget" name="subphaseTW">
         <property name="minimumSize">
          <size>
-          <width>800</width>
+          <width>650</width>
           <height>0</height>
          </size>
         </property>
@@ -281,7 +320,7 @@
          <bool>false</bool>
         </attribute>
         <attribute name="horizontalHeaderDefaultSectionSize">
-         <number>280</number>
+         <number>200</number>
         </attribute>
         <attribute name="horizontalHeaderStretchLastSection">
          <bool>true</bool>
@@ -336,7 +375,7 @@
           <property name="minimumSize">
            <size>
             <width>250</width>
-            <height>57</height>
+            <height>30</height>
            </size>
           </property>
           <property name="text">
@@ -349,7 +388,7 @@
           <property name="minimumSize">
            <size>
             <width>0</width>
-            <height>57</height>
+            <height>30</height>
            </size>
           </property>
           <property name="text">
@@ -374,8 +413,8 @@
           </property>
           <property name="minimumSize">
            <size>
-            <width>200</width>
-            <height>57</height>
+            <width>100</width>
+            <height>30</height>
            </size>
           </property>
           <property name="text">
@@ -394,7 +433,7 @@
           <property name="minimumSize">
            <size>
             <width>0</width>
-            <height>57</height>
+            <height>30</height>
            </size>
           </property>
           <property name="text">
@@ -416,7 +455,7 @@
           <property name="minimumSize">
            <size>
             <width>65</width>
-            <height>57</height>
+            <height>30</height>
            </size>
           </property>
           <property name="text">
@@ -447,8 +486,8 @@
           </property>
           <property name="minimumSize">
            <size>
-            <width>220</width>
-            <height>57</height>
+            <width>100</width>
+            <height>30</height>
            </size>
           </property>
           <property name="text">
@@ -467,7 +506,7 @@
           <property name="minimumSize">
            <size>
             <width>0</width>
-            <height>57</height>
+            <height>30</height>
            </size>
           </property>
           <property name="readOnly">
@@ -486,7 +525,7 @@
           <property name="minimumSize">
            <size>
             <width>50</width>
-            <height>57</height>
+            <height>30</height>
            </size>
           </property>
           <property name="text">
@@ -512,8 +551,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1001</width>
-     <height>47</height>
+     <width>688</width>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
