--- a/UI_Forms/EMCEE_ConfInterval_Widget.ui
+++ b/UI_Forms/EMCEE_ConfInterval_Widget.ui
@@ -21,7 +21,7 @@
      </property>
      <widget class="QWidget" name="">
       <layout class="QGridLayout" name="gridLayout">
-       <item row="10" column="0" colspan="2">
+       <item row="14" column="0" colspan="2">
         <widget class="QPushButton" name="calcConfIntervPushButton">
          <property name="text">
           <string>Calculate Confidence Interval</string>
@@ -31,7 +31,7 @@
        <item row="0" column="0">
         <widget class="QLabel" name="label">
          <property name="text">
-          <string>MCMC Walker</string>
+          <string>MCMC Walkers</string>
          </property>
         </widget>
        </item>
@@ -56,10 +56,10 @@
          </property>
         </widget>
        </item>
-       <item row="7" column="1">
-        <widget class="QPushButton" name="pushButton">
+       <item row="10" column="1">
+        <widget class="QPushButton" name="startSamplingPushButton">
          <property name="text">
-          <string>Sample</string>
+          <string>Start Sampling</string>
          </property>
         </widget>
        </item>
@@ -70,14 +70,14 @@
          </property>
         </widget>
        </item>
-       <item row="9" column="0">
+       <item row="13" column="0">
         <widget class="QLabel" name="label_6">
          <property name="text">
           <string>Percentile</string>
          </property>
         </widget>
        </item>
-       <item row="9" column="1">
+       <item row="13" column="1">
         <widget class="QDoubleSpinBox" name="percentileDoubleSpinBox">
          <property name="decimals">
           <number>3</number>
@@ -87,10 +87,22 @@
          </property>
         </widget>
        </item>
-       <item row="7" column="0">
-        <widget class="QPushButton" name="pushButton_2">
+       <item row="12" column="0" colspan="2">
+        <widget class="QTreeWidget" name="parameterTreeWidget">
+         <property name="selectionMode">
+          <enum>QAbstractItemView::ExtendedSelection</enum>
+         </property>
+         <column>
+          <property name="text">
+           <string>Parameters</string>
+          </property>
+         </column>
+        </widget>
+       </item>
+       <item row="10" column="0">
+        <widget class="QPushButton" name="stopSamplingPushButton">
          <property name="text">
-          <string>Stop</string>
+          <string>Stop Sampling</string>
          </property>
         </widget>
        </item>
@@ -115,7 +127,7 @@
          </property>
         </widget>
        </item>
-       <item row="6" column="0" colspan="2">
+       <item row="8" column="0" colspan="2">
         <widget class="QProgressBar" name="progressBar">
          <property name="value">
           <number>24</number>
@@ -143,24 +155,28 @@
          </property>
         </widget>
        </item>
-       <item row="8" column="0">
-        <spacer name="verticalSpacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
+       <item row="7" column="0" colspan="2">
+        <widget class="QLabel" name="fitIterLabel">
+         <property name="text">
+          <string/>
          </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
          </property>
-        </spacer>
+        </widget>
+       </item>
+       <item row="11" column="0">
+        <widget class="QLabel" name="label_7">
+         <property name="text">
+          <string>Parameter Chains</string>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="chainTab">
        <attribute name="title">
@@ -179,6 +195,16 @@
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
          <widget class="MplWidget" name="correlationMPLWidget" native="true"/>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="acceptFracTab">
+       <attribute name="title">
+        <string>Acceptance Fraction</string>
+       </attribute>
+       <layout class="QHBoxLayout" name="horizontalLayout_3">
+        <item>
+         <widget class="MplWidget" name="acceptFracMPLWidget" native="true"/>
         </item>
        </layout>
       </widget>
