--- a/UI_Forms/EMCEE_ConfInterval_Widget.ui
+++ b/UI_Forms/EMCEE_ConfInterval_Widget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>922</width>
-    <height>616</height>
+    <width>2141</width>
+    <height>1128</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -168,7 +168,7 @@
        <item row="13" column="1">
         <widget class="QLineEdit" name="MCMCBurnLineEdit">
          <property name="text">
-          <string>10</string>
+          <string>0</string>
          </property>
         </widget>
        </item>
@@ -176,7 +176,7 @@
      </widget>
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>3</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="chainTab">
        <attribute name="title">
@@ -195,6 +195,29 @@
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
          <widget class="MplWidget" name="correlationMPLWidget" native="true"/>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_8">
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>30</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>Correlation time</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QTextEdit" name="corrTimeTextEdit">
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>200</height>
+           </size>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
